--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ h1{
     color: #fff;
    
     text-align: center;
+    letter-spacing: .4rem;
 }
 .clear-fix::after{
     content: "";
@@ -74,9 +75,9 @@ section{
     font-size: 1.6rem;
 }
 h1{
-    font-size: 10.4rem;
+    font-size: 9.4rem;
     text-transform: uppercase;
-   
+    color: #42200b;
     font-weight: 700;
     margin: 0rem 4rem;
     font-family: 'Alfa Slab One', cursive;
@@ -91,6 +92,7 @@ h2{
    
     margin: -1rem 0 0rem 4rem;
     font-family: 'Alfa Slab One', cursive;
+     color: #42200b;
    
 }
 
@@ -100,6 +102,7 @@ h3{
     text-transform: uppercase;
     font-weight: 700;
     font-family: 'Bebas Neue', cursive;
+     color: #42200b;
    
 
 }
@@ -118,9 +121,11 @@ h5{
   
     margin: 13rem 0 0 4rem;
       font-family: 'Bebas Neue', cursive;
+       color: #42200b;
 }
 p{
     font-family: 'Montserrat', sans-serif;
+     color: #42200b;
 }
 
 /*paragraph*/
@@ -134,6 +139,7 @@ p{
     background-repeat: no-repeat;
     background-size: 100% 100%;
     position: relative;
+   
   
     
 }
@@ -225,15 +231,18 @@ p{
 /*------banar Section--------*/
 /*--------------------------*/
 .banarSection{
-    color: #fff;
+    
     font-family: 'Bebas Neue', cursive;
     height: 50vh;
 }
+
 .banarSection h4{
     padding: 18px 0 0 24px;
+     color: #fff;
 }
 .banarSection h3{
     padding-left: 18px ;
+    color: #fff;
 }
 .banar1{
    margin: 4rem 0rem 0rem 3rem;
@@ -326,6 +335,7 @@ p{
     box-shadow: 1px 1px 5px !important;
     width: 90%;
     margin-left: 5%;
+    margin-top: 2rem;
    
 }
 .event-content{
@@ -403,7 +413,7 @@ input{
    
    height: 500px;
    color: #fff;
-   position: relative;
+
 }
 .main-footer{
      width: 90%;
@@ -414,19 +424,20 @@ input{
   
    height: 300px;
    color: #fff;
-   position: relative;
+  
 }
 .footer-logo{
   
 }
 .footer-logo img{
-       height: 50px;
+      
     margin: 2rem 0 0 2rem;
 }
 .footer-logo p{
    font-size: 1.8rem;
     text-transform: capitalize;
     margin: 3rem 1rem 0 2rem;
+     color: #fff;
 }
 .footer-content{
        margin-top: 20%;
@@ -435,7 +446,7 @@ input{
 }
 .copyright{
     font-size: 1.5rem !important;
-    margin-top: 7rem !important;
+    margin-top: 4rem !important;
 }
 .footer-content a{
        text-decoration: none;
@@ -466,8 +477,7 @@ input{
 .foote-icons {
     
 
-    position: absolute;
-    bottom: 16px;
-    left: 77%;
+  
+  
      
 }
